infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: indicadores-azure
  labels:
    name: indicadores-azure
    app: indicadores-azure
