infra/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: indicadores-frontend
  namespace: indicadores
  labels:
    app: indicadores-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: indicadores-frontend
